tests/baselines/reference/collisionThisExpressionAndEnumInGlobal.errors.txt
tests/cases/compiler/collisionThisExpressionAndEnumInGlobal.ts(1,6): error TS2399: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.


==== tests/cases/compiler/collisionThisExpressionAndEnumInGlobal.ts (1 errors) ====
    enum _this { // Error
         ~~~~~
!!! error TS2399: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
        _thisVal1,
        _thisVal2,
    }
    var f = () => this;